<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:background="#f3f3f3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/centerline1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        />

    <RelativeLayout
        android:id="@+id/education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/experience"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/first_bg"
        android:padding="8dp">

        <TextView
            android:id="@+id/educationtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/insideredu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/educationtext"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:text="@string/high_school_senior_secondary_school_and_b_tech"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/education" />


        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/second_bg"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline1"
        android:layout_marginBottom="10dp"
        android:id="@+id/experience">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experience"
            android:textColor="@color/white"
            android:id="@+id/exptext"
            android:textSize="22sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/exptext"
            android:orientation="horizontal"
            android:id="@+id/insiderexp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Obviously I'm a Developer. Experienced with all stages of the development cycle for dynamic web projects."
                android:textColor="@color/white"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/experience"/>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/third_bg"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/centerline1"
        android:layout_marginTop="10dp"
        android:id="@+id/skills">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            android:textColor="@color/white"
            android:id="@+id/skilltext"
            android:textSize="22sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltext"
            android:orientation="horizontal"
            android:id="@+id/insiderskill">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Showing my skills in both designing as well as in developing"
                android:textColor="@color/white"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/skills"/>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/fourth_bg"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/skills"
        android:layout_marginTop="10dp"
        android:id="@+id/projects">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projects"
            android:textColor="@color/white"
            android:id="@+id/projecttext"
            android:textSize="22sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/projecttext"
            android:orientation="horizontal"
            android:id="@+id/insiderproject">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="All my projects in web, android, python and c++"
                android:textColor="@color/white"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/projects"/>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/belowbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/lineabelowbar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:id="@+id/hireme">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/hire_me"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/hire_me"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="end"
                android:orientation="horizontal"
                android:id="@+id/contactme">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/contact_me"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/contact_me"/>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>